<?xml version="1.0" encoding="utf-8"?>



<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".RegisterActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/vert">

<RelativeLayout
    android:id="@+id/page_2_cree"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/vert"
    tools:ignore="ExtraText">


    <ImageView
        android:id="@+id/camera_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"


        android:layout_centerHorizontal="true"
        android:layout_marginLeft="148dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/camer_in_circle"
        android:foregroundGravity="fill"
        android:onClick="upload_image"

        />

    <EditText
        android:id="@+id/nom"
        android:layout_width="288dp"
        android:layout_height="48dp"
        style="@style/EditTextStyle"
        android:layout_below="@id/camera_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/ellipse"
        android:fontFamily="@font/hubballi_regular"

        android:hint="@string/nom_champ"
        android:inputType="text"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/prenom"
        android:layout_width="288dp"
        android:layout_height="48dp"
        android:layout_below="@id/nom"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/spacing_between_inputs"
        android:background="@drawable/ellipse"
        android:fontFamily="@font/hubballi_regular"
        android:hint="@string/prenom_champ"
        android:inputType="text"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        style="@style/EditTextStyle"/>


    <EditText
        android:id="@+id/email"
        android:layout_width="288dp"
        android:layout_height="48dp"
        android:layout_below="@id/prenom"
        android:layout_centerHorizontal="true"
        style="@style/EditTextStyle"
        android:layout_marginTop="@dimen/spacing_between_inputs"
        android:background="@drawable/ellipse"
        android:fontFamily="@font/hubballi_regular"
        android:hint="@string/email_champ"
        android:inputType="text|textEmailAddress"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />


    <EditText
        android:id="@+id/password"
        android:layout_width="288dp"
        android:layout_height="48dp"
        android:layout_below="@id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/spacing_between_inputs"
        android:background="@drawable/ellipse"
        android:fontFamily="@font/hubballi_regular"
        android:hint="@string/password_champ"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:textColor="@color/black"
        style="@style/EditTextStyle"
        android:textColorHint="@color/black" />


    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="288dp"
        android:layout_height="48dp"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/ellipse"
        android:fontFamily="@font/hubballi_regular"
        android:hint="@string/confirm_password_champ"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:textColor="@color/black"
        style="@style/EditTextStyle"
        android:textColorHint="@color/black" />

    <Spinner
        android:id="@+id/regime_option"
        android:layout_width="288dp"
        android:layout_height="48dp"
        android:layout_below="@id/confirm_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"


        android:background="@drawable/ellipse"
        android:dropDownSelector="@color/black"
        android:entries="@array/regimes"
        android:spinnerMode="dropdown"
        android:textAlignment="viewStart" />


    <EditText
        android:id="@+id/regime_description"
        android:layout_width="288dp"
        android:layout_height="80dp"
        android:layout_below="@id/regime_option"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/input_background_small"
        android:fontFamily="@font/hubballi_regular"
        android:hint="@string/description_regime"
        android:inputType="text|textMultiLine"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:textColor="@color/black"
        style="@style/EditTextStyle"
        android:textColorHint="@color/black" />

    <RelativeLayout
        android:id="@+id/accept_condition"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_below="@id/regime_description"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:clipToOutline="true"
        android:paddingStart="9dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="48dp"
            android:layout_height="24dp"
            android:layout_marginLeft="20dp"

            android:textColorLink="#00FFFFFF" />

        <TextView
            android:id="@+id/accepter"
            android:layout_width="60dp"
            android:layout_height="24dp"
            android:layout_toEndOf="@+id/checkBox"
            android:fontFamily="@font/hubballi_regular"
            android:fontFeatureSettings="tnum, lnum"

            android:gravity="center"
            android:lineSpacingExtra="1sp"
            android:text="@string/accepter"
            android:textColor="@color/white"
            android:translationY="-0.44sp" />

        <TextView
            android:id="@+id/condition"
            android:layout_width="282dp"
            android:layout_height="24dp"
            android:layout_toEndOf="@+id/accepter"
            android:fontFamily="@font/hubballi_regular"
            android:fontFeatureSettings="tnum, lnum"
            android:gravity="center|start"
            android:lineSpacingExtra="1sp"
            android:text="@string/conditions_utilisation"
            android:textColor="@color/menu_bas"
            android:translationY="-0.44sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="282dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/accept_condition"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"

        android:fontFamily="@font/hubballi_regular"
        android:text="@string/inscrire"
        android:textColor="@color/white" />


</RelativeLayout>
</ScrollView>